Fixes instruction-list li padding spacing

--- a/styles.css
+++ b/styles.css
@@ -43,7 +43,7 @@ ul{
 
 .instruction-list li{
     width: 85%;
-    padding: 12px;
+    padding: 8px;
 }
 
 .container{
